# mlibc

./: crossfile  meson.build
sysdeps/eucalypt/: entry.cpp  meson.build  sysdeps.cpp
sysdeps/eucalypt/include/abi-bits/: auxv.h  blkcnt_t.h  blksize_t.h  clockid_t.h  dev_t.h  errno.h  fcntl.h  fd_set.h  fsblkcnt_t.h  fsfilcnt_t.h  gid_t.h  ino_t.h  mode_t.h  nlink_t.h  off_t.h  pid_t.h  stat.h  suseconds_t.h  time_t.h  uid_t.h
sysdeps/eucalypt/include/bits/: syscall.h
